clean refacto todo service